# Sald-o-da-Reserva

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .vercelignore  commitlint.config.js  create.md  desktop.ini  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  railway.toml  tsconfig.json  turbo.json
.claude/: launch.json  settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
apps/api/: .env.example  Dockerfile.local  nixpacks.toml  package.json  railway.toml
apps/api/prisma/: schema.prisma  seed.ts
apps/api/scripts/: identification-smoke.ts  vision-smoke.ts
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/print-agent/: README.md  index.html  package.json
apps/print-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/print-agent/src-tauri/capabilities/: default.json
apps/print-agent/src-tauri/src/: api_client.rs  commands.rs  download.rs  lib.rs  logging.rs  printers.rs  processor.rs  runtime.rs  state.rs  storage.rs  tray.rs  ws_client.rs
apps/print-agent/src-tauri/src/print/: image_print.rs  mod.rs  pdf_print.rs  test_label.rs
apps/web/: .env.local.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  vercel.json
docs/: checklist-producao.md  checkout-perfis-recebimento-analise.md  funcionario-virtual-arquitetura.md  meta-integration-setup.md  print-center.md  site-completo.md
(+580 files in other folders)
