[package]
name = "saldao-print-agent"
version = "0.1.0"
description = "Saldão Print Agent — recebe PrintJobs do Print Center e imprime etiquetas de retirada/envio"
authors = ["Saldão da Reserva"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "print_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["windows-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
printpdf = "0.7"

[dev-dependencies]
wiremock = "0.6"

